--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1 style="color: #F5DF4D; text-align: center;">Vereiste Minimale Filmkwaliteit</h1>
+    <h1 style="color: #F5DF4D; text-align: center;">Minimale kwaliteit filmtype</h1>
 
     <form id="filmkwaliteitForm">
         <label for="procedure">Kies de procedure:</label>
@@ -67,7 +67,7 @@
             <br><br>
         </div>
 
-        <button type="submit" class="btn">Geef de minimale filmkwaliteit</button>
+        <button type="submit" class="btn">Minimale Filmkwaliteit</button>
     </form>
 
     <h2>Resultaat</h2>
@@ -117,7 +117,7 @@
                 "RT21013": {
                     "0-6mm": { "X-Ray <150kv": "D4", "X-Ray >150Kv": "/", "Se75": "D5 (D4 recommended) *Als het draadje niet gehaald wordt dan D4 + minimaal zwarting 3.0", "Ir192": "/" },
                     "6-10mm": { "X-Ray <150kv": "D4", "X-Ray >150Kv": "D5", "Se75": "D5 (D4 recommended) *Als het draadje niet gehaald wordt dan D4 + minimaal zwarting 3.0", "Ir192": "/" },
-                    "10-20mm": { "X-Ray <150kv": "/", "X-Ray >150Kv": "D5", "Se75": "D5", "Ir192": "D4" },
+                    "10-20mm": { "X-Ray <150kv": "/", "X-Ray >150Kv": "D5", "Se75": "D5", "Ir192": "D5" },
                     "20-50mm": { "X-Ray <150kv": "/", "X-Ray >150Kv": "D5", "Se75": "D5", "Ir192": "D5" },
                     ">50mm": { "X-Ray <150kv": "/", "X-Ray >150Kv": "D7", "Se75": "/", "Ir192": "D5" }
                 },
@@ -164,7 +164,7 @@
             }
 
             if (quality === "/") {
-                 return "Niet gespecificeerd voor deze combinatie in de geselecteerde proceduretabel.";
+                 return "deze combinatie van bron en doorstraalde dikte is onlogisch";
             }
 
             return quality;
