--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
         <li><a href="LW_Verdeler.html" class="link1"><i class="fa-solid fa-tape"></i>Langsnaad tool<i class="fa-solid fa-tape"></i></a></li>
         <li><a href="MinFFD.html" class="link4"><i class="fa-solid fa-ruler"></i>Minimale FFD<i class="fa-solid fa-ruler"></i></a></li>
         <li><a href="Draadjesv2.html" class= "link3"><i class="fa-solid fa-grip-lines-vertical"></i>Draadvereiste EN-B, ASME<i class="fa-solid fa-grip-lines-vertical"></i></a></li>
+        <li><a href="filmkwaliteit.html" class="link1"><i class="fa-solid fa-film"></i>Filmtype<i class="fa-solid fa-film"></i></a></li>
         <li><a href="bundelbreedte.html" class= "link2"><i class="fa-solid fa-less-than"></i>Bundelgrootte<i class="fa-solid fa-less-than"></i></a></li>
         <li><a href="afzettinggamma.html" class= "link1"><i class="fa-solid fa-road-barrier"></i>Afzetting Gamma<i class="fa-solid fa-road-barrier"></i></a></li>
         <li><a href="handigelinks.html" class= "link4"><i class="fa-solid fa-link"></i>Handige links<i class="fa-solid fa-link"></i></a></li>
