--- a/filmkwaliteit.html
+++ b/filmkwaliteit.html
@@ -15,20 +15,19 @@
             margin: 0;
         }
 
-        .btn {
-            /* GELE KLEUR HERSTELD */
-            background-color: #F5DF4D; 
-            border: none;
-            color: black;
-            padding: 15px 30px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 18px;
-            margin: 4px 2px;
-            cursor: pointer;
-            border-radius: 8px;
-        }
+        .btn {
+            background-color: #F5DF4D; /* Gele kleur */
+            border: none;
+            color: black;
+            padding: 15px 30px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 18px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 8px;
+        }
 
         
         /* Modal (pop-up) achtergrond */
